255,257: fix bug in menuItem sync, fix layout issues in onboarding (#260)

--- a/src/options/pages/InstalledPage.scss
+++ b/src/options/pages/InstalledPage.scss
@@ -49,3 +49,15 @@
     }
   }
 }
+
+.VideoCard {
+  .card {
+    min-width: 725px;
+    max-width: 725px;
+    width: 725px;
+
+    .card-body {
+      padding: 1.5rem;
+    }
+  }
+}
